--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,7 +11,7 @@
 
 .carousel img {
 	width: 100vw;
-	height: 75vh; /* ou o que ficar melhor no visual */
+	height: 75vh;
 	object-fit: cover;
 	scroll-snap-align: start;
 	transition: transform 0.5s ease;
