--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-	width: 100%;
+	width: 100vw;
 	overflow: hidden;
 }
 
@@ -10,7 +10,7 @@
 }
 
 .carousel img {
-	width: 100vw;
+	width: 100%;
 	height: 75vh;
 	object-fit: cover;
 	scroll-snap-align: start;
@@ -33,6 +33,10 @@
 	width: 100vw;
 	height: 60vh;
 	object-fit: cover;
+}
+
+.static-image.grayscale {
+	filter: grayscale(100%);
 }
 
 @keyframes slide {
