--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -9,8 +9,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   line-height: 1.6;
-  color: #333;
-  background-color: #fef9f5;
+ 
+  background-color: #FEF9F5;
   width: 100%;
   overflow-x: hidden;
 
