--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -9,10 +9,10 @@
   justify-content: center;
   padding: 0.5rem;
   border-radius: 0 0 8% 8%;
-  position: relative; /* para posicionar hamburger */
+  position: relative; 
 }
 
-/* Botão hamburger escondido no desktop */
+
 .hamburger {
   display: none;
   flex-direction: column;
@@ -36,7 +36,7 @@
   transition: all 0.3s ease;
 }
 
-/* Animação hamburger aberto */
+
 .hamburger.open span:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
 }
@@ -61,7 +61,7 @@
 }
 
 .logo-button:hover {
-  transform: scale(1.05);
+  transform: scale(1.10);
   transition: transform 0.3s ease;
 }
 
