--- a/src/pages/NossasCriacoes.css
+++ b/src/pages/NossasCriacoes.css
@@ -102,7 +102,9 @@
 
 
 .cardapio-pdf {
-  margin-top: 40px;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .btn-cardapio {
